--- a/01.md
+++ b/01.md
@@ -9,24 +9,25 @@
 3. 「Windowsフォームアプリ」 を選択して次へ
 4. 場所の右の ... をクリック
 5. 左の欄のドキュメント > 自分の名前のフォルダーを選択。それ以降は任意の場所を選んで フォルダーの選択 をクリック
-6. プロジェクト名欄に任意のプロジェクト名を入力(`cs0412`など)今日の日付など　適当でええよ分かれば
+6. プロジェクト名欄に任意のプロジェクト名を入力(`cs0412`など)今日の日付など　csはc#の略
 7. 次へ をクリック
 
 
 ## プログラムの開始(実行)方法
--
--
--
+- 濃い緑の三角アイコンをクリック 
+- デバッグメニュー ＞ デバックの開始 ("メニュー"は上に並んでるファイルだの編集だののやつ)
+- F5キー
+- 
 
 ### 注意
 
 **白抜き三角アイコン、デバッグなしで開始、Ctrl+F5キーは使わないこと!!**
 
 ## プログラムの停止方法
--
--
--
--
+- ウィンドウ右上のXボタンをクリック
+- デバックメニュー ＞ デバックの停止
+- visual studioを選択した状態で、shift + F5キー
+- 赤の四角アイコンをクリック
 
 ### 注意
 
