--- a/01.md
+++ b/01.md
@@ -17,7 +17,6 @@
 - 濃い緑の三角アイコンをクリック 
 - デバッグメニュー ＞ デバックの開始 ("メニュー"は上に並んでるファイルだの編集だののやつ)
 - F5キー
-- 
 
 ### 注意
 
@@ -35,21 +34,27 @@
 
 ## ツールボックスの表示方法
 
+表示メニュー＞ツールボックス(cttl+Alt+x)を選択
 
 
 ## ツールボックスを画面に固定するアイコン
 
-
+画鋲アイコンをクリックして縦にする。
+**よく使うやつはこれやると良し！**
 
 ## 演習1-1：ツールボックスからボタン(Button)を選択して、フォームに配置して実行してみよう
 
 
 
 ## プロパティウィンドウの表示方法を以下に記せ
+表示メニュー＞プロパティウィンドウを選択。
 
+プロパティ＝属性
 
 
 ## ボタンの文字を「あいさつ」に変更する方法を記せ
+
+-ボタンをクリックして選択
 
 
 
