--- a/01.md
+++ b/01.md
@@ -54,12 +54,14 @@
 
 ## ボタンの文字を「あいさつ」に変更する方法を記せ
 
--ボタンをクリックして選択
--プロパティウィンドウのText欄に`あいさつ`と入力して、Enterキー
+- ボタンをクリックして選択
+- プロパティウィンドウのText欄に`あいさつ`と入力して、Enterキー
 
 
 
 ## ボタンで動くプログラムの書き方を記せ
+- ボタンをダブルクリック
+- 開いた場所にプログラムを書く
 
 
 
