--- a/03.md
+++ b/03.md
@@ -1,7 +1,7 @@
 # 問題の解消＝デバッグ
 
 ## エラーウィンドウ
-以下のようなウィンドウが表示されたら「はい」「いいえ」を選ぶこと。
+以下のようなウィンドウが表示されたら「いいえ」を選ぶこと。
 
 ![エラーウィンドウ](imgs/0300.png)
 
@@ -16,6 +16,8 @@
 
 ## エラー場所を見つける方法
 
+エラー一覧を確認して、上からダブルクリックする。
+**どんなものであれ必ず目を通すんだ！**
 
 
 ## ユーザーが処理していない例外 ウィンドウ
@@ -24,20 +26,28 @@
 ![ゼロ例外](imgs/0301.png)
 
 ### 対処方法
+何らかの方法で、プログラムを停止させる！
 
-?
+まあわかるよね
+
+停止ボタンとかね
 
 ## 初心者の代表的なエラー原因
-1.
-2.
-3.
-4.
-5.
-6.
+1.スペル間違い
+
+2.全角文字　**全角のスペースだけはやめとけ**
+
+3.書く場所の間違い
+
+4.{}や()の不一致 **かっこの始まりと終わりは一緒**
+
+5.実行時のテキストボックスの入力間違い
+
+6.セミコロン抜け
 
 また、 Visual Studio で気を付けなければならないことを以下に記せ
 
-** ? **
+**Visual Studioが自動的に挿入したコードは、絶対に削除や変更をしないこと！！**
 
 ---
 
