--- a/04.md
+++ b/04.md
@@ -3,23 +3,23 @@
 ## button1のプロパティを観察する
 
 - BackColor
-  - ?
+  - ボタンの背景色
 - Enabled
-  - ?
+  - 有効設定(ボタンの当たり判定)
 - Font
-  - ?
+  - 文字の書体やサイズなど、まあわかるよね...
 - ForeColor
-  - ?
+  - 文字の色
 - Location
-  - ?
+  - ボタンの座標
 - Size
-  - ?
+  - ボタンのサイズ
 - Text
-  - ?
+  - ボタンの名前
 - TextAlign
-  - ?
+  - ボタンの中の文字を揃える位置(左寄せやら中央やら)
 - Visible
-  - ?
+  - 実行したときボタンを表示するか(falseにすると当たり判定も消える)
 
 BackgroundImage, FlatStyle, Image, ImageAlignなど、時間がある時にいじってみよう。
 
