--- a/04.md
+++ b/04.md
@@ -47,21 +47,21 @@ trueとfalseな
 ## 演習4：上記の例の左辺と右辺を入れ替えたらどうなるか
 何が起きたか以下にメモ。
 
-- ?エラー
+- エラー
 
 ## (name)プロパティ
 ### button1の(name)を変更した時に変わった場所は？
 
-- ?
-- ?
+- プロパティウィンドウのすぐ下のコンボボックス
+- プログラム内のコントロールの名前
 
 ### (name)プロパティとは何か？
 
-- ?
+- コントロールをプログラムで指定する名前
 
 ### (name)プロパティの注意点
 
-
+同じ名前は使えない。日本語は避ける。
 ---
 
 [前へ](03.md) | [目次へ](README.md#%E7%9B%AE%E6%AC%A1) | [次へ](05.md)
