--- a/05.md
+++ b/05.md
@@ -44,16 +44,35 @@ button1.Top = button1.Top + 10;
 - ボタンを左に動かすには、
   - Leftプロパティの値を減らす
 - ボタンを右に動かすには、
-  - ? プロパティの値を ?
+  - Leftプロパティの値を増やす
 - ボタンを上に動かすには、
-  - Topプロパティの値を ?
+  - Topプロパティの値を増やす
 - ボタンを下に動かすには、
-  - ? プロパティの値を ?
+  - Topプロパティの値を減らす
 
 ## 演習5-1：Labelを1つと、ボタンを4つ十字に配置して、思いついたことをやってみよう。
 
 ```cs
 
+        private void button4_Click(object sender, EventArgs e)
+        {
+            label1.Top = label1.Top + -10;
+        }
+
+        private void button3_Click(object sender, EventArgs e)
+        {
+            label1.Left = label1.Left + -10;
+        }
+
+        private void button5_Click(object sender, EventArgs e)
+        {
+            label1.Left = label1.Left + 10;
+        }
+
+        private void button2_Click(object sender, EventArgs e)
+        {
+            label1.Top = label1.Top + 10;
+        }
 ```
 
 ## 様々な型のデータをMessageBox.Show()で表示する方法
