--- a/03.md
+++ b/03.md
@@ -48,6 +48,7 @@
 また、 Visual Studio で気を付けなければならないことを以下に記せ
 
 **Visual Studioが自動的に挿入したコードは、絶対に削除や変更をしないこと！！**
+**ボタン関連でもミスってもそれはボタンの名前をそれに変えるなりして、コード自体を追加したり、変更をしない！！**
 
 ---
 
