--- a/05.md
+++ b/05.md
@@ -88,18 +88,21 @@ button1.Top = button1.Top + 10;
 ```cs
   MessageBox.Show(100.ToString());
 ```
+**ToString()は数値を文字列に変換する関数だよ！**
 
 あるいは
 
 ```cs
 MessageBox.Show($"{100}");
 ```
+**$をつけると"{}"の中のプログラムを文字列に変換できる**
 
 ### float型の 3.14
 
 ```cs
 MessageBox.Show(3.14f.ToString());
 ```
+**float型なのでfをつける**
 
 あるいは
 
@@ -134,9 +137,9 @@ MessageBox.Show($"{1.23f*2.34f}");
 ### string型の 1+1
 
 ```cs
-
+MessageBox.Show("1" + "1");
 ```
-
+**""で文字列に変換するので、11になる**
 ## 複合代入演算子
 
 |処理                   |複合代入演算|算術演算に書き換えると|
