--- a/05.md
+++ b/05.md
@@ -157,6 +157,7 @@ MessageBox.Show("1" + "1");
 |aを1増やす|     a++;                    |a = a + 1;            |		
 |aを1減らす|	      a--;               |a = a - 1;            |
 
+**変数をMessageBox.Showで表示する場合はMessageBox.Show($"{a}");で表示する**
 ---
 
 [前へ](04.md) | [目次へ](README.md#%E7%9B%AE%E6%AC%A1) | [次へ](06.md)
