--- a/05.md
+++ b/05.md
@@ -94,6 +94,7 @@ button1.Top = button1.Top + 10;
 
 ```cs
 MessageBox.Show($"{100}");
+MessageBox.Show($"label1.Top={label1.Top}");
 ```
 **$をつけると"{}"の中のプログラムを文字列に変換できる**
 
