--- a/08.md
+++ b/08.md
@@ -8,32 +8,55 @@
 1. ラベルがウィンドウの外に出たことを判定
 2. 移動方向を反転
 
+**プログラムを考える前にやりたいことを書いてみよう！**
+
 次にそれぞれの方法をコンピューターでどうやるかを書く。
 
-1. 例えば左端なら、? なったらウィンドウの外に出たことになる
-2. 移動方向は、? させれば逆転する
+1. 例えば左端なら、ラベルのLeftが0より小さくなったらウィンドウの外に出たことになる
+2. 移動方向は、移動量の符号を反転させれば逆転する
 
 2のやり方はすでに知っている。1の方法が分かればよい。
 
 ### メモ
 AIの進化により「コンピューターでどうやるか」を人間が考える必要はなくなりつつある。つまり、**やりたいことを言葉で書き表す技能**の方が大切であることを知っておこう。
 
-## ifの書き方
+## ifの書き方(排他処理)
 
 ```cs
-
+if(条件式)
+{
+  //条件式が成立時の処理
+}
 ```
 
 ## if～elseの書き方
 
 ```cs
-
+if(条件式)
+{
+  //条件式が成立時の処理
+}
+else
+{
+  //条件式が不成立時の処理
+}
 ```
 
 ## if～else if～elseの書き方
 
 ```cs
-
+if(条件式)
+{
+  //条件式が成立時の処理
+}
+else if(条件式2)
+{
+  //条件式が不成立で、かつ、条件式2が成立時の処理
+}
+else
+{
+  //条件式が不成立時の処理
+}
 ```
 
 `else if`はいくつ書いてもよい。ただし、4つ以上に分岐する場合は他の方法を検討する。
