if文(その1～基本形～)

--- a/08.md
+++ b/08.md
@@ -66,39 +66,40 @@ else
 ### aとbが等しい
 
 ```cs
-
+a == b
 ```
 
 ### aとbが等しくない
 
 ```cs
-
+a != b
 ```
 
 ### aがbより大きいか、等しい
 
 ```cs
-
+a >= b
 ```
 
 ### aがbより小さいか、等しい
 
 ```cs
-
+a <= b
 ```
 
 ### aがbより大きい
 
 ```cs
-
+a > b
 ```
 
 ### aがbより小さい
 
 ```cs
-
+a < b
 ```
-
+**比較演算の基準は左側だよ！**
+**そして!や>,<などを書く場合はそういうのも＝より左に書こう！**
 ## 演習8-1
 ラベルを動かそう。
 
