if文(その1～基本形～)

--- a/08.md
+++ b/08.md
@@ -143,8 +143,10 @@ a < b
 以上と演習8-3の考え方を踏まえてtimer1_Tick()関数内にif文を記述して、ラベルが画面の下で跳ね返るようにしよう。
 
 ### おまけ
-- 画面の幅は`ClientSize.Height`で参照可能
+- 画面の幅は`ClientSize.Height(画面の高さ)`で参照可能
+- 画面の横幅はClientSize.Width
 
+**HeightとWidthだぞ！**
 ## 演習8-5：速度の変化に対応させる。
 
 - 絶対値とは？
