--- a/09.md
+++ b/09.md
@@ -35,6 +35,7 @@ https://learn.microsoft.com/ja-jp/dotnet/csharp/language-reference/statements/se
 - 1つの式の状態に応じて分岐
 - 分岐条件がシンプル
 - 分岐が多い
+- キャラクターの状態の管理(歩行、ダッシュなど)
 
 典型的な例としては、状態変数に応じた状態遷移、戻り値が多い通信処理などの結果に応じた分岐など。
 
