--- a/12.md
+++ b/12.md
@@ -16,7 +16,7 @@ Visual C#では以下のような乱数を生成できる。
 |〃|`random.Next(100)`|0～99|
 |指定の範囲の整数の乱数を生成|`random.Next(-2,2)`|-2～1|
 |〃|`random.Next(-100,100)`|-100～99|
-|0以上1未満のdouble型の乱数を生成|`?`|0以上1未満|
+|0以上1未満のdouble型の乱数を生成|`random.Nextdouble`|0以上1未満|
 
 ## 演習12-1
 ラベルの速度をランダムにしてみよう。
