--- a/13.md
+++ b/13.md
@@ -6,7 +6,7 @@
 
 ## 配列とは？
 
-?
+複数の変数をまとめたもの。
 
 ## 定義方法(Javaと同じ。Cとは違うので注意)
 |内容|プログラム例|
@@ -21,7 +21,10 @@
 例）int型のiarという名前の配列を定義してあった場合、以下のようにして3つの配列にアクセスできる。それぞれに別の値を記録しておくことができる。
 
 ```cs
-
+iar[0] = 0;
+iar[1] = -10;
+iar[2] = 100;
+MessageBox.Show($"{iar[0],{iar[1]},{iar[2]"};
 ```
 
 ## 演習13-2
